--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,8 +56,22 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "python.languageServer": "Pylance",
+  "python.analysis.typeCheckingMode": "basic",
   "python.analysis.diagnosticSeverityOverrides": {
     "reportMissingModuleSource": "none"
-  }
+  },
+  "python.analysis.typeshedPaths": [
+    ".venv/Lib/site-packages"
+  ],
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.analysis.extraPaths": [
+    "c:\\Users\\chrru\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\boards\\0x239A\\0x80EC",
+    "c:\\Users\\chrru\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\stubs",
+    "c:\\Users\\chrru\\AppData\\Roaming\\Code\\User\\globalStorage\\joedevivo.vscode-circuitpython\\bundle\\20231114\\adafruit-circuitpython-bundle-py-20231114\\lib"
+  ],
+  "circuitpython.board.version": null,
+  "circuitpython.board.vid": "0x239A",
+  "circuitpython.board.pid": "0x80EC"
 }
-
